<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"
        app:iconTint="@drawable/bottom_nav_selector"
        android:contentDescription="@string/title_home" />

    <item
        android:id="@+id/navigation_habits"
        android:icon="@drawable/ic_habits"
        android:title="@string/title_habits"
        app:showAsAction="ifRoom"
        app:iconTint="@drawable/bottom_nav_selector"
        android:contentDescription="@string/title_habits" />

    <item
        android:id="@+id/navigation_mood"
        android:icon="@drawable/ic_mood"
        android:title="@string/title_mood"
        app:showAsAction="ifRoom"
        app:iconTint="@drawable/bottom_nav_selector"
        android:contentDescription="@string/title_mood" />

    <item
        android:id="@+id/navigation_water"
        android:icon="@drawable/ic_water"
        android:title="@string/title_water"
        app:showAsAction="ifRoom"
        app:iconTint="@drawable/bottom_nav_selector"
        android:contentDescription="@string/title_water" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom"
        app:iconTint="@drawable/bottom_nav_selector"
        android:contentDescription="@string/title_settings" />
</menu>
